app/styles/_navbar-alt.less
//
// navbar-alt (top bar with project menu and utility nav)
// ------------------------------------------------------

#header-logo {
  background-image: url('@{image-path}/logo-origin-thin.svg');
  background-repeat: no-repeat;
  background-position: center left;
  // Use initial logo dimensions; or set a width and/or height (eg - background-size: auto 36px)
  // Max logo dimensions width 230px / height 36px
  background-size: initial;
  height: @navbar-os-header-height-mobile;
  width: 230px;
}

.navbar-pf-alt {
  background: @navbar-os-bg-color;
  border-bottom: 1px solid @sidebar-os-border-color;
  border-left: 1px solid transparent;
  border-right: 1px solid transparent;
  border-top: 0;
  min-height: inherit;
  .layout-pf-alt-fixed & {
    left: 0;
    position: fixed;
    right: 0;
    top: 0;
    z-index: @zindex-navbar-fixed;
  }
  .navbar-toggle {
    float: none;
    margin: 0;
    padding: 9px 14px;
    @media (max-width: @screen-xxs-max) {
      padding-left: 8px;
      padding-right: 8px;
    }
  }
  .navbar-header {
    .flex(@columns: 1 1 0%);
    .flex-display(@display: flex);
    text-decoration: none;
    .navbar-home {
      .align-items(@align: center);
      .flex(@columns: 1 0 0%);
      .flex-display(@display: flex);
      .justify-content(@justify: center);
      // remove ie prefixes when PostCSS Autoprefixer is included for github issue #7559
      -ms-flex-align: center;
      -ms-flex-pack: center;

      color: @sidebar-os-color;
      font-weight: 300;
      text-decoration: none;
      .pficon {
        color: #A8A9AA;
        font-size: 20px;
      }
      &:hover, &:focus, &:hover .pficon, &:focus .pficon {
        background-color: @navbar-os-project-menu-active-bg;
        color: @navbar-os-project-menu-active-color;
      }
    }
  }
  .nav.navbar-iconic {
    margin-right: 10px;
    .dropdown-menu {
      margin-top: -10px;
      right: 0;
      &:after {
        border: 6px solid transparent;
        border-bottom-color: #fff;
        border-top-width: 0;
        content: "";
        display: block;
        height: 0;
        position: absolute;
        right: 7px;
        top: -6px;
        vertical-align: middle;
        width: 0;
      }
    }
  }
  .navbar-brand {
    border: 0;
    height: auto;
    margin-left: 0;
    padding: 0 0 0 10px;
    position: relative;
  }
  .navbar-toggle {
    border: 0;
    display: block;
    float: left;
    &:hover, &:focus {
      .icon-bar {
        background: @navbar-pf-alt-navbar-toggle-icon-bar-hover-bg;
      }
    }
    + .navbar-brand {
      margin-left: 0;
    }
    .icon-bar {
      background: @navbar-pf-alt-color;
    }
  }
  .nav .nav-item-iconic {
    // utiltity links
    color: @navbar-pf-alt-color;
    cursor: pointer;
    line-height: normal;
    max-height: none;
    padding-top: @navbar-padding-vertical;
    padding-bottom: @navbar-padding-vertical;
    &:hover, &:focus {
      background-color: transparent;
      color: @navbar-pf-alt-active-color;
      text-decoration: none;
      .caret, .fa, .glyphicon, .pf-icon {
        color: @navbar-pf-alt-active-color;
      }
    }
    .caret {
      height: 12px;
    }
    .caret, .fa, .pf-icon {
      color: @navbar-pf-alt-color;
      font-size: @font-size-base + 3;
      width: auto;
    }
    .pficon-user,
    .username + .caret {
      display: block;
      float: left;
    }
    .username {
      float: left;
      font-weight: 300;
      max-width: 100px;
      padding: 0 4px;
      @media (min-width: @screen-md-min) {
        max-width: 150px;
      }
      @media (min-width: @screen-lg-min) {
        max-width: 200px;
      }
      @media (min-width: @screen-xlg-min) {
        max-width: 250px;
      }
      + .caret {
        margin-top: 3px;
      }
    }
  }
  .open > .nav-item-iconic {
    &, &:hover, &:focus {
      background: transparent;

      .caret, .fa, .pf-icon {
        color: @navbar-pf-alt-active-color;
      }
    }
  }
}

@media (min-width: @screen-sm-min) {
  #header-logo {
    height: @navbar-os-header-height-desktop;
  }
  .navbar-pf-alt .nav {
    .dropdown .nav-item-iconic {
      padding-right: 20px;
    }
    .nav-item-iconic {
      display: block;
      float: left;
      padding: 21px 10px 20px;
      .status-icon {
        position: relative;
        top: 1px;
      }
    }
  }
}

// System status
.navbar-pf-alt {
  .system-status .status-issue {
    display: none;
    font-weight: 300;
    max-width: 100px;
    padding: 0 0 0 5px;
    position: relative;
    top: -2px;
    @media (min-width: @screen-lg-min) {
      display: inline;
    }
  }
  .system-status-mobile {
    @media (min-width: @screen-sm-min) {
      display: none;
    }
    &:before {
      content: '';
      display: block;
      position: absolute;
      top: 0;
      left: -1px;
      width: 1px;
      background: @sidebar-os-border-color;
      height: 100%;
    }
  }
}

.navbar-flex-btn {
  position: relative;
  .project-action-btn {
    color: @navbar-os-project-menu-color;
    font-weight: 300;
    text-decoration: none;
    .align-items(@align: center);
    .flex(@columns: 1 0 0%);
    .justify-content(@justify: center);
    &:hover {
      background-color: @navbar-os-project-menu-active-bg;
      color: @navbar-os-project-menu-active-color;
    }
    // inset borders
    &:before, &:after {
      content: '';
      display: block;
      position: absolute;
      top: 0;
      width: 1px;
      background: @sidebar-os-border-inset-color;
      height: 100%;
    }
    &:before {
      left: 0px;
    }
    &:after {
      right: -1px;
    }
  }
  .navbar-toggle.project-action-btn:before {
    // remove inset border
    width: 0;
  }
}

@media (max-width: @screen-xs-max) {
  .layout-pf-alt-fixed .navbar-pf-alt {
    position: absolute;
    .navbar-brand:after {
        content: '';
        background: @sidebar-os-border-color;
        display: block;
        height: 100%;
        left: -1px;
        position: absolute;
        top: 0;
        width: 1px;
    }
  }
  .top-header.logged-out {
    .toggle-menu {
      display: none;
    }
  }
  .navbar-flex-btn {
    .flex(@columns: 0 0 50px);
    a {
      color: lighten(@navbar-os-project-menu-color, 20%);
      cursor: pointer;
      .flex-display(@display: flex);
      font-size: 18px;
      &:hover, &:active, &:focus {
        background-color: @sidebar-os-active-bg;
        color: @navbar-os-project-menu-color;
      }
    }
  }
}

@media (max-width: @screen-xxs-max) {
  .navbar-flex-btn {
    .flex(@columns: 0 0 40px);
  }
}

@media (min-width: @screen-sm-min) {
  .navbar-pf-alt {
    .navbar-header {
      height: 60px;
      width: (@sidebar-left-width-md - @navbar-header-offset);
      .navbar-brand {
        padding: 0;
        margin-left: 30px;
        margin-right: 75px;
        margin-top: 0;
      }
    }
  }
  .navbar-flex-btn {
    &.toggle-menu {
      display: none;
    }
    .project-action-btn {
      border-right: 1px solid @navbar-os-project-menu-border;
      flex-basis: auto; // IE
      padding: 0 15px;
    }
  }
}

@media (min-width: @screen-lg-min) {
  .navbar-pf-alt .navbar-header {
    width: (@sidebar-left-width-md - @navbar-header-offset);
  }
}
@media (min-width: @screen-xlg-min) {
  .navbar-pf-alt {
    .navbar-header {
      width: (@sidebar-left-width-lg - @navbar-header-offset);
      .navbar-home {
        .justify-content(@justify: flex-start);
        // remove ie prefixes when PostCSS Autoprefixer is included for github issue #7559
        -ms-flex-pack: start;

        font-size: @font-size-base + 1;
        margin-top: 0;
        padding-left: 20px;
        .pficon {
          .primary-nav-icon-xl();
        }
        .visible-xlg-inline-block {
          margin-left: 3px;
        }
      }
    }
  }
}

